* Version 0.2
	- User interface has been localized; It's now possible to change the main window language at run-time.
	- Image render mode has been removed;
	- Persistent user settings;
	- Minor fixes and changes;

* Version 0.1
	- First initial public release