@@ -29,7 +29,6 @@ THE SOFTWARE.
 *	CleanDirectoryList.cmake;
 *	CreateLaunchers.cmake;
 ***********************************************************************
-	
 Original Author:
 2009-2010 Ryan Pavlik <rpavlik@iastate.edu> <abiryan@ryand.net>
 http://academic.cleardefinition.com
@@ -37,7 +36,7 @@ Iowa State University HCI Graduate Program/VRAC
 
 Copyright Iowa State University 2009-2010.
 Distributed under the Boost Software License, Version 1.0.
-	
+
 Boost Software License - Version 1.0 - August 17th, 2003
 
 Permission is hereby granted, free of charge, to any person or organization
@@ -60,7 +59,7 @@ FITNESS FOR A PARTICULAR PURPOSE, TITLE AND NON-INFRINGEMENT. IN NO EVENT
 SHALL THE COPYRIGHT HOLDERS OR ANYONE DISTRIBUTING THE SOFTWARE BE LIABLE
 FOR ANY DAMAGES OR OTHER LIABILITY, WHETHER IN CONTRACT, TORT OR OTHERWISE,
 ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
-DEALINGS IN THE SOFTWARE.	
+DEALINGS IN THE SOFTWARE.
 
 ***********************************************************************
 * Notice for file FindGraphViz.cmake
