@@ -11,7 +11,6 @@ features, and there's no particular order.
 * Per-folder and/or per-src subgraphs;
 * Highlightning of vertex and of its connected edges;
 * Multi-threaded folders scan;
-* Saving graphs to file, by using image formats like .png, .jpg, etc;
 * Detecting graph cycles and warn about them (Tarjan's strongly connected components algorithm wich is O(E+V) in the worst case);
 * Running as stand-alone or as Qt Creator plugin (or any other "compatible" IDE);
 * Watch over file system changes and automatically update the graph;
